deployment/k8s.yaml
---
# ------------------------------------#
# Namespace                           #
# ------------------------------------#
apiVersion: v1
kind: Namespace
metadata:
  name: ${K8S_NAMESPACE}
spec:
  finalizers:
    - kubernetes
---
# ------------------------------------#
# Deployment                          #
# ------------------------------------#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${K8S_SERVICE_NAME}
  namespace: ${K8S_NAMESPACE}
  labels:
    app: ${K8S_SERVICE_NAME}
spec:
  replicas: ${K8S_MIN_REPLICAS}
  selector:
    matchLabels:
      app: ${K8S_SERVICE_NAME}
  template:
    metadata:
      labels:
        app: ${K8S_SERVICE_NAME}
    spec:
      containers:
      - name: ${K8S_SERVICE_NAME}
        image: ${IMAGE_NAME}:${IMAGE_TAG}
        resources:
          requests:
            cpu: ${K8S_RESOURCES_REQUESTS_CPU}
            memory: ${K8S_RESOURCES_REQUESTS_MEMORY}
          limits:
            cpu: ${K8S_RESOURCES_LIMITS_CPU}
            memory: ${K8S_RESOURCES_LIMITS_MEMORY}
        ports:
          - containerPort: 4000

---
# ------------------------------------#
# Internal Service                    #
# ------------------------------------#
apiVersion: v1
kind: Service
metadata:
  name: ${K8S_SERVICE_NAME}
  labels:
    app: ${K8S_SERVICE_NAME}
  namespace: ${K8S_NAMESPACE}
spec:
  type: ClusterIP
  selector:
    app: ${K8S_SERVICE_NAME}
  ports:
    - protocol: TCP
      port: 443
      targetPort: 4000
      name: https
---
# ------------------------------------#
# Ingress                             #
# ------------------------------------#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${K8S_SERVICE_NAME}
  labels:
    name: ${K8S_SERVICE_NAME}
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:3000"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,x-access-token,ngrok-skip-browser-warning"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  rules:
  - host: ${DOMAIN}
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: ${K8S_SERVICE_NAME}
            port: 
              number: 443

---
# ------------------------------------#
# Service Node                        #
# ------------------------------------#
apiVersion: v1
kind: Service
metadata:
  name: ${K8S_SERVICE_NAME}-node
  labels:
    app: ${K8S_SERVICE_NAME}
  namespace: ${K8S_NAMESPACE}
spec:
  type: NodePort
  selector:
    app: ${K8S_SERVICE_NAME}
  ports:
    - protocol: TCP
      port: 443
      targetPort: 4000
      nodePort: 30100
      name: https
