deployment/k8s_patched2.yaml
---
# ------------------------------------#
# Namespace                           #
# ------------------------------------#
apiVersion: v1
kind: Namespace
metadata:
  name: gnosis
spec:
  finalizers:
    - kubernetes
---
# ------------------------------------#
# Deployment                          #
# ------------------------------------#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gnosis-main-service
  namespace: gnosis
  labels:
    app: gnosis-main-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gnosis-main-service
  template:
    metadata:
      labels:
        app: gnosis-main-service
    spec:
      containers:
      - name: gnosis-main-service
        image: laguzs/gnosis_main_service:1.3.5
        resources:
          requests:
            cpu: 100m
            memory: 700Mi
          limits:
            cpu: 1000m
            memory: 700Mi
        ports:
          - containerPort: 4000

---
# ------------------------------------#
# Internal Service                    #
# ------------------------------------#
apiVersion: v1
kind: Service
metadata:
  name: gnosis-main-service
  labels:
    app: gnosis-main-service
  namespace: gnosis
spec:
  type: ClusterIP
  selector:
    app: gnosis-main-service
  ports:
    - protocol: TCP
      port: 443
      targetPort: 4000
      name: https
---
# ------------------------------------#
# Ingress                             #
# ------------------------------------#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gnosis-main-service
  labels:
    name: gnosis-main-service
spec:
  rules:
  - host: gnosis.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: gnosis-main-service
            port: 
              number: 443

---
# ------------------------------------#
# Service Node                        #
# ------------------------------------#
apiVersion: v1
kind: Service
metadata:
  name: gnosis-main-service-node
  labels:
    app: gnosis-main-service
  namespace: gnosis
spec:
  type: NodePort
  selector:
    app: gnosis-main-service
  ports:
    - protocol: TCP
      port: 443
      targetPort: 4000
      nodePort: 30100
      name: https
